# honorsThesis_CompareLatinNER

./: .gitignore  LatinBERT_min_example.ipynb  LatinNERpipeline.py  README.md  latinBERT_tsv_predict.py  llmNER_fewShot_min_ex.ipynb  llmNER_min_example.ipynb  llmNER_tsv_predict.py  load_from_tsv.py  mBERT_min_example.ipynb  mBERT_tsv_predict.py  pyproject.toml  requirements.txt  results_evaluation.ipynb
predictions_0_claude/few-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_claude/zero-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_latinBERT/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_mBERT/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_ministral/few-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_ministral/zero-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_mistralNemo/few-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
predictions_0_mistralNemo/zero-shot/: Cicero_PhilippicaOratio_CicPhi01_GOLD.tsv  Juvenal_sat_1_3_GOLD.tsv  Tacitus_TacHistoriae_TacHist1_GOLD.tsv
